# plonky2-ecgfp5

./: Cargo.toml  LICENSE.md  README.md  out.txt
benches/: curve.rs  scalar.rs
examples/: scalar_mul.rs  schnorr_sig.rs
src/: base_field.rs  curve.rs  gfp5.rs  lib.rs  macros.rs  scalar_field.rs
src/curve/: base_field.rs  curve.rs  mod.rs  mul_table.rs  scalar_field.rs  test_utils.rs  utils.rs
src/gadgets/: base_field.rs  curve.rs  mod.rs  scalar_field.rs
src/gates/: gfp5.rs  gfp5_mul.rs  mod.rs
