[package]
name = "plonky2-ecgfp5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { path = "../plonky2/plonky2" }
plonky2_ecdsa = { path = "../plonky2/ecdsa" }
num = "0.4"
itertools = "0.10"
serde = "1"

[dev-dependencies]
rand = "0.8.5"
anyhow = "1.0.51"
