[package]
name = "plonky2-ecgfp5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { path = "../plonky2/plonky2" }
plonky2_field = { path = "../plonky2/field" }
plonky2_ecdsa = { path = "../plonky2/ecdsa" }
num = "0.4"
itertools = "0.10"
serde = "1"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }

[dev-dependencies]
rand = { version = "0.8.5", features = ["min_const_gen"] }
anyhow = "1.0.51"
criterion = "0.4"

[[bench]]
name = "scalar"
harness = false