[package]
name = "plonky2_ecgfp5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = "0.1.1"
plonky2_field = "0.1.0"
plonky2_ecdsa = "0.1.0"
num = "0.4"
itertools = "0.10"
serde = "1"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }

[dev-dependencies]
rand = { version = "0.8.5", features = ["min_const_gen"] }
anyhow = "1.0.51"
criterion = "0.4"

[[bench]]
name = "scalar"
harness = false

[[bench]]
name = "curve"
harness = false